; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_HandlePrintReturnHex.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_HandlePrintReturnHex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TextBuffer = common dso_local global i32* null, align 8
@g_hwnd = common dso_local global i32 0, align 4
@ResultX = common dso_local global i32 0, align 4
@ResultY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @HandlePrintReturnHex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HandlePrintReturnHex(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = call i64 @SendMessage(i32 %12, i32 %13, i32 %14, i32 %15)
  store i64 %16, i64* %10, align 8
  %17 = load i64, i64* %10, align 8
  %18 = trunc i64 %17 to i32
  %19 = load i32*, i32** @TextBuffer, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 8
  %21 = call i32 @htoa(i32 %18, i32* %20)
  %22 = load i32, i32* @g_hwnd, align 4
  %23 = call i32 @GetWindowRect(i32 %22, i32* %11)
  %24 = load i32*, i32** @TextBuffer, align 8
  %25 = load i32, i32* @ResultX, align 4
  %26 = load i32, i32* @ResultY, align 4
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @PrintTextXY(i32* %24, i32 %25, i32 %26, i32 16, i32 %27)
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i64 @SendMessage(i32, i32, i32, i32) #1

declare dso_local i32 @htoa(i32, i32*) #1

declare dso_local i32 @GetWindowRect(i32, i32*) #1

declare dso_local i32 @PrintTextXY(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
